--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.firebaseimagelablingproject">
-
     <!-- below line is use to add camera feature in our app -->
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true" />
-
-    <!-- permission for internet -->
+        android:required="true" /> <!-- permission for internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -21,11 +18,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirebaseImageLablingProject"
         tools:targetApi="31">
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="label" />
+
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
